k8s_playbooks/app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      port: 80
      targetPort: http
