k8s_playbooks/app/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: app

spec:
  type: ClusterIP

  selector:
    app: fastapi

  ports:
    - name: http
      port: 80
      targetPort: http
